--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
 <meta name="msapplication-TileImage" content="/images/favicon/mstile-144x144.png">
 <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
 <meta name="theme-color" content="#990000">
-<title>Currently Under Construction | I am working on something awesome and will be back soon!</title>
+<title>Site atualmente em Contrução | Volte que em breve !</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200,400">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<main>
-		<h1>Under Construction</h1>
-		<h2>I am working on something awesome and will be back soon!</h2>
-			<a href="mailto:info@rafaeldejongh.com"><i class="fa fa-envelope"></i></a>
-			<a href="https://www.rafaeldejongh.com/CV/RafaelDeJongh-Curriculumvitae-EN.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
-			<a href="https://www.facebook.com/Rafael.De.Jongh.Artist" target="_blank"><i class="fa fa-facebook"></i></a>
-			<a href="http://steamcommunity.com/id/Rafael_De_Jongh/" target="_blank"><i class="fa fa-steam"></i></a>
-			<a href="https://www.artstation.com/artist/rafaeldejongh" target="_blank"><i class="fa icon-artstation"></i></a>
-			<a href="http://www.gamebanana.com/members/366132" target="_blank"><i class="fa icon-gamebanana"></i></a>
+		<h1>Em Contrução</h1>
+		<h2>Site atualmente em contrução. Volte em breve!</h2>
+			<a href="mailto:me@mbmaciel.com"><i class="fa fa-envelope"></i></a>
+			<a href="https://www.mbmaciel.com" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+			<a href="https://www.facebook.com/mbmaciel.programador" target="_blank"><i class="fa fa-facebook"></i></a>
+			
+			
+			
 	</main>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
